[package]
name = "roguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { path = "../../oss_repos/bracket-lib/rltk", features = ["serde"] }
ron = "0.8.1"
serde = {version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
serde_json = "1.0.108"
specs = { path = "../../oss_repos/specs", features = ["serde"] }
specs-derive = {path = "../../oss_repos/specs/specs-derive"}
