[package]
name = "rogue"
version = "0.1.0"
edition = "2024"

[features]
default = ["dev"]
dev = ["bevy/bevy_dev_tools", "bevy/debug", "bevy/file_watcher"]

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["2d", "dynamic_linking"] }
bevy_asset_loader = { version = "0.25.0", features = ["2d"] }
bevy_ecs_tilemap = "0.18.1"
leafwing-input-manager = "0.20.0"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
