[package]
name = "rogue"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", features = ["2d"], default-features = false }
bevy_asset_loader = { version = "0.25.0", features = ["2d"] }
bevy_ecs_tilemap = "0.18.1"
leafwing-input-manager = "0.20.0"
rand = "0.10.0"

[profile.release]
opt-level = "z"       # optimize for size instead of speed
lto = true            # enable link-time optimization (strips dead code across crates)
strip = true          # remove debug symbols and symbol tables
codegen-units = 1     # slower compile, but better optimization/smaller binary
